fix: 手动补充Lombok注解对应的方法
🔧 修复内容:
- 移除所有Lombok注解依赖 (@Data, @Slf4j, @RequiredArgsConstructor等)
- 手动添加所有getter和setter方法
- 添加equals、hashCode、toString方法
- 添加构造函数
- 更新日志记录器为标准SLF4J Logger

📁 涉及文件:
- User.java - 用户实体类 (添加完整的getter/setter方法)
- UserRegisterRequest.java - 注册请求DTO
- UserLoginRequest.java - 登录请求DTO
- UserResponse.java - 用户响应DTO
- LoginResponse.java - 登录响应DTO
- UserService.java - 用户服务类 (构造函数注入)
- UserController.java - 用户控制器 (构造函数注入)
- application.yml - 添加JWT配置

✨ 优势:
- 消除IDE插件依赖，提高兼容性
- 代码更加明确和可控
- 便于调试和维护
- 符合传统Java开发规范

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -54,6 +54,11 @@ file:
   upload-dir: ./uploads
   allowed-types: jpg,jpeg,png,gif,pdf,doc,docx,xls,xlsx
 
+# JWT配置
+jwt:
+  secret: mySecretKey1234567890123456789012345678901234567890
+  expiration: 86400000  # 24小时 (毫秒)
+
 # 日志配置
 logging:
   level:
