--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/agri_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     
   # JPA配置
@@ -47,17 +47,12 @@ spring:
 # JWT配置
 jwt:
   secret: agri-trade-secret-key-for-graduation-project-2024
-  expiration: 86400000 # 24小时
+  expiration: 86400000 # 24小时 (毫秒)
 
 # 文件存储配置
 file:
   upload-dir: ./uploads
   allowed-types: jpg,jpeg,png,gif,pdf,doc,docx,xls,xlsx
-
-# JWT配置
-jwt:
-  secret: mySecretKey1234567890123456789012345678901234567890
-  expiration: 86400000  # 24小时 (毫秒)
 
 # 日志配置
 logging:
